--- a/mainWindow.html
+++ b/mainWindow.html
@@ -7,7 +7,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a class="brand-logo center">Shopping List Updated</a>
+            <a class="brand-logo center">Shopping List</a>
         </div>
     </nav>
 
